<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="40dp" >

        <LinearLayout
            android:layout_width="288dp"
            android:layout_height="88dp"
            android:background="@drawable/login_input_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/login_user_et"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingLeft="12dp"
                android:singleLine="true"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/login_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:singleLine="true"
                android:textSize="16dp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="288dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_zhu"
            android:text="@string/login"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="288dp"
            android:layout_height="48dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_suo"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/forget_password"
                android:textColor="#a0917e"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ll_tv_register"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_ren"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:paddingLeft="100dp"
                android:text="@string/register_account"
                android:textColor="#a0917e" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/new_device_tip" />

        <Button
            android:id="@+id/new_device_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_new_device" />
    </LinearLayout>

</LinearLayout>