<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:paddingLeft="20dp"
        android:paddingTop="25dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/enable"
            android:textColor="@color/appointment_text_color"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/ib_switch"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/off" />
    </RelativeLayout>

    <WebView
        android:id="@+id/wb_chart"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/circle"
            android:textColor="@color/appointment_text_color"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_Monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_left_bg"
                android:button="@null"
                android:checked="false"
                android:text="@string/one"
                android:textColor="@drawable/radoo_select1" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#e6e6e6" />

            <RadioButton
                android:id="@+id/rb_Thuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_middle_bg"
                android:button="@null"
                android:text="@string/two"
                android:textColor="@drawable/radoo_select1" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#e6e6e6" />

            <RadioButton
                android:id="@+id/rb_Wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_middle_bg"
                android:button="@null"
                android:text="@string/three"
                android:textColor="@drawable/radoo_select1" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#e6e6e6" />

            <RadioButton
                android:id="@+id/rb_Thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_middle_bg"
                android:button="@null"
                android:text="@string/four"
                android:textColor="@drawable/radoo_select1" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#e6e6e6" />

            <RadioButton
                android:id="@+id/rb_Friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_middle_bg"
                android:button="@null"
                android:text="@string/five"
                android:textColor="@drawable/radoo_select1" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#e6e6e6" />

            <RadioButton
                android:id="@+id/rb_Saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_middle_bg"
                android:button="@null"
                android:text="@string/six"
                android:textColor="@drawable/radoo_select1" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#e6e6e6" />

            <RadioButton
                android:id="@+id/rb_Sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_right_bg"
                android:button="@null"
                android:text="@string/day"
                android:textColor="@drawable/radoo_select1" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>