<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topBg"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:background="@drawable/home_tab_bg" >

    <TextView
        android:id="@+id/tv_center_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/appointment"
        android:textColor="@color/title_color"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:minHeight="20dp"
        android:minWidth="20dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/back"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:minHeight="20dp"
        android:minWidth="20dp"
        android:background="@null"
        android:text="@string/confirm" />

    <!--
         <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/btn_right"
        android:background="@color/black" />
    -->

</RelativeLayout>