<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c9c9c9" />

    <LinearLayout
        android:id="@+id/llt_heating_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_heating_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/heating_mode"
            android:textColor="#5d7884"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#b2b2b2" />

        <RadioGroup
            android:id="@+id/rg_heating_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rb_model_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableLeft="@drawable/radio_selector"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:text="@string/mode_default"
                android:textColor="#5d7884"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#d4d4d4" />

            <RadioButton
                android:id="@+id/rb_mode_outdoor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableLeft="@drawable/radio_selector"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:text="@string/mode_outdoor"
                android:textColor="#5d7884"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#d4d4d4" />

            <RadioButton
                android:id="@+id/rb_mode_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableLeft="@drawable/radio_selector"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:text="@string/mode_night"
                android:textColor="#5d7884"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#d4d4d4" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llt_bath_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_bath_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/bath_mode"
            android:textColor="#5d7884"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#b2b2b2" />

        <RadioGroup
            android:id="@+id/rg_bath_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rb_mode_comfort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableLeft="@drawable/radio_selector"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:text="@string/mode_comfort"
                android:textColor="#5d7884"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#d4d4d4" />

            <RadioButton
                android:id="@+id/rb_mode_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableLeft="@drawable/radio_selector"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:text="@string/mode_bath"
                android:textColor="#5d7884"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#d4d4d4" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>