<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#000"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/edit_device_name"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/drename_et"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:hint="请输入名称"
        android:maxLength="15"
        android:paddingLeft="4dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="#fff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/drename_btn_cancel"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <Button
            android:id="@+id/drename_btn_confirm"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:background="@null"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>